# onedge

./: .gitignore  CMakeLists.txt  README.md
examples/: parse_framed_message.cpp  safe_buffer.cpp  safe_string.cpp
include/onedge/: buffer.h  c_api.h  checked_math.h  error.h  fixed_buffer.h  onedge_config.h  reader.h  result.h  secure_buffer.h  secure_string.h  span.h  string.h  writer.h
src/: buffer.cpp  c_api.cpp  error.cpp  string.cpp
tests/: test_buffer.cpp  test_c_api.cpp  test_checked_math.cpp  test_fixed_buffer.cpp  test_harness.h  test_main.cpp  test_reader.cpp  test_result.cpp  test_secure_types.cpp  test_span.cpp  test_string.cpp  test_writer.cpp
